# hummingbird

./: .gitattributes  .gitignore  .parlance.json  CONTRIBUTING.md  Cargo.toml  Contemporary.toml  README.md  build.rs  flake.nix
.github/workflows/: check-release-channel.yml  linux.yml  macos-arm.yml  macos.yml  release-linux.yml  release-macos.yml  release-windows.yml  rust.yml  windows.yml
assets/icons/: LICENSE
docs/: building.md  settings.md  theming.md
hummingbird-server/: Cargo.toml
hummingbird-server/migrations/mariadb/: 001_initial_schema.sql  002_add_users.sql
hummingbird-server/migrations/postgres/: 001_initial_schema.sql  002_add_users.sql
hummingbird-server/migrations/sqlite/: 001_initial_schema.sql  002_add_users.sql
hummingbird-server/src/: config.rs  errors.rs  lib.rs  main.rs  models.rs  scanner.rs
hummingbird-server/src/api/: albums.rs  art.rs  artists.rs  auth.rs  mod.rs  playlists.rs  scan.rs  search.rs  stream.rs  tracks.rs
hummingbird-server/src/db/: mariadb.rs  mod.rs  postgres.rs  sqlite.rs
hummingbird-server/src/domain/: mod.rs
hummingbird-server/src/domain/playlist/: dao.rs  mod.rs
hummingbird-server/src/domain/scanner/: dao.rs  decode.rs  discover.rs  mod.rs  orchestrator.rs
hummingbird-server/src/domain/user/: dao.rs  mod.rs
hummingbird-server/src/infrastructure/: mod.rs
hummingbird-server/src/infrastructure/auth/: jwt.rs  middleware.rs  mod.rs  oidc.rs  password.rs
hummingbird-server/src/infrastructure/persistence/: mod.rs
hummingbird-server/src/infrastructure/persistence/mariadb/: library.rs  mod.rs  playlist.rs  scanner.rs  user.rs
hummingbird-server/src/infrastructure/persistence/postgres/: library.rs  mod.rs  playlist.rs  scanner.rs  user.rs
hummingbird-server/src/infrastructure/persistence/sqlite/: library.rs  mod.rs  playlist.rs  scanner.rs  user.rs
hummingbird-server/src/routes/: albums.rs  art.rs  artists.rs  mod.rs  playlists.rs  scan.rs  search.rs  stream.rs  tracks.rs
hummingbird-server/tests/: api_tests.rs  db_tests.rs
migrations/: 20240730163151_create_album_table.sql  20240917084650_add_release_information.sql  20250424090924_add_track_artist.sql  20250512214434_add_album_location_data.sql  20250512231103_add_album_path_track_info.sql  20250825224757_create_playlist_table.sql  20250825225240_create_playlist_item.sql  20250825234341_insert_liked_songs.sql  20251022214837_add_album_year_field.sql  20260111094612_add_vinyl_numbering.sql  20260215002300_add_track_update_cleanup_trigger.sql  20260226124733_add_sort_date_vcolumn.sql  20260226220000_unify_release_date.sql  20260226223000_drop_old_date_columns.sql  20260227091607_artist_count_indicies.sql
package/inno/: Hummingbird_aarch64.iss  Hummingbird_x86_64.iss  LICENSE.txt
queries/: track_stats.sql
queries/assets/: find_album_art.sql  find_album_thumb.sql
queries/playlist/: add_track.sql  create_playlist.sql  delete_playlist.sql  empty_playlist.sql  get_all_playlists.sql  get_playlist.sql  get_track_files.sql  get_track_listing.sql  list_tracks_for_export.sql  lookup_track.sql  move_track_down.sql  move_track_up.sql  playlist_has_track.sql  remove_track.sql  select_playlist_item.sql
queries/scan/: create_album.sql  create_album_path.sql  create_track.sql  delete_playlist_items_for_track.sql  get_album_id.sql  get_album_path.sql  list_playlist_ids_for_track.sql
src/: data.rs  devices.rs  library.rs  main.rs  media.rs  playback.rs  services.rs  settings.rs  ui.rs  util.rs
src/data/: events.rs  interface.rs  thread.rs  types.rs
src/devices/: builtin.rs  errors.rs  format.rs  resample.rs  traits.rs  util.rs
src/devices/builtin/: cpal.rs  dummy.rs  pulse.rs  win_audiograph.rs
src/media/: errors.rs  metadata.rs  pipeline.rs  playback.rs  traits.rs
src/media/builtin/: symphonia.rs
src/playback/: events.rs  interface.rs  queue.rs  queue_storage.rs  thread.rs
src/playback/thread/: audio_engine.rs  device_controller.rs  media_controller.rs  queue_manager.rs
src/services/: controllers.rs  mmb.rs
src/services/controllers/: macos.rs  mpris.rs  windows.rs
src/services/mmb/: lastfm.rs
src/services/mmb/lastfm/: client.rs  requests.rs  types.rs
src/settings/: interface.rs  playback.rs  scan.rs  storage.rs
src/ui/: about.rs  app.rs  arguments.rs  assets.rs  availability.rs  caching.rs  command_palette.rs  components.rs  constants.rs  controls.rs  data.rs  global_actions.rs  header.rs  library.rs  models.rs  queue.rs  search.rs  settings.rs  statusbar.rs  theme.rs  util.rs
src/ui/assets/: bundled.rs  db.rs
src/ui/components/: button.rs  callout.rs  checkbox.rs  context.rs  drag_drop.rs  dropdown.rs  icons.rs  input.rs  label.rs  labeled_slider.rs  menu.rs  menu_bar.rs  menus_builder.rs  modal.rs  nav_button.rs  palette.rs  playback_controls.rs  resizable_sidebar.rs  reusable_refinement.rs  scrollbar.rs  section_header.rs  sidebar.rs  slider.rs  styling.rs  table.rs  textbox.rs  tooltip.rs  uniform_grid.rs  window_chrome.rs  window_header.rs
src/ui/components/icons/: icon.rs  icons.rs
src/ui/components/palette/: finder.rs
src/ui/components/table/: column_resize_handle.rs  grid_item.rs  table_data.rs  table_item.rs
src/ui/header/: lastfm.rs  scrubber.rs
src/ui/search/: album_item.rs  model.rs  search_item.rs
src/ui/settings/: interface.rs  library.rs  playback.rs
translations/: cs.json  el.json  en.json  meta.json  sk.json  vi.json
