[package]
name = "muzak"
version = "0.1.0"
edition = "2021"

[features]
runtime_shaders = ["gpui/runtime_shaders"]

[dependencies]
chrono = "0.4"
dateparser = "0.2"
symphonia = { version = "0.5", features = ["all", "opt-simd-sse"] }
cpal = "0.15"
bitflags = "2"
rubato = "0.16"
rb = "0.4"
gpui = { git = "https://github.com/zed-industries/zed" }
smallvec = "1"
rust-embed = "8"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"
tracing = "0.1"
image = "0.25"
ahash = { version = "0.8", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-async-std", "sqlite", "chrono"] }
async-std = { version = "1", features = ["attributes"] }
directories = "6"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
intx = "0.1"
rand = { version = "0.9" }
notify = "8"
async-trait = "0.1"
isahc = { version = "1", features = ["json"] }
md5 = "0.7"
urlencoding = "2"
open = "5"
unicode-segmentation = "1"
nucleo = "0"

[build-dependencies]
dotenvy = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2"
libpulse-simple-binding = "2"
pulsectl-rs = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = [
    "Media_Audio",
    "Media_Render",
    "Media_MediaProperties",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Win32_System_WinRT",
    "Win32_System_Com",
] }
windows-result = "0.3"

[profile.release-distro]
inherits = "release"
lto = true
strip = true
panic = "abort"

[package.metadata.bundle]
name = "Muzak"
identifier = "me.william341.muzak"
