[package]
name = "muzak"
version = "0.1.0"
edition = "2021"

[features]
runtime_shaders = ["gpui/runtime_shaders"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1"
async-std = { version = "1", features = ["attributes"] }
async-trait = "0.1"
bitflags = "2"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
dateparser = "0.2"
directories = "6"
gpui = { git = "https://github.com/zed-industries/zed" }
image = "0.25"
intx = "0.1"
isahc = { version = "1", features = ["json"] }
md5 = "0.7"
notify = "8"
nucleo = "0.5"
open = "5"
rand = "0.9"
rb = "0.4"
rubato = "0.16"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
sqlx = { version = "0.8", features = ["runtime-async-std", "sqlite", "chrono"] }
symphonia = { version = "0.5", features = ["all", "opt-simd-sse"] }
thiserror = "2.0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-segmentation = "1"
urlencoding = "2"

[build-dependencies]
dotenvy = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2"
libpulse-simple-binding = "2"
pulsectl-rs = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60", features = [
    "Media_Audio",
    "Media_Render",
    "Media_MediaProperties",
    "Devices_Enumeration",
    "Foundation_Collections",
    "Win32_System_WinRT",
    "Win32_System_Com",
] }
windows-result = "0.3"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.release-distro]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = "s"

[package.metadata.bundle]
name = "Muzak"
identifier = "me.william341.muzak"
